--- a/_config.yml
+++ b/_config.yml
@@ -53,3 +53,19 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
+
+############
+## Custom ##
+
+## Collections 
+# For further information see: 
+#   https://jekyllrb.com/docs/collections/
+#   https://jekyllrb.com/docs/step-by-step/09-collections/
+
+collections:
+  zettelkasten:
+    output: true
+    permalink: /:collection/:path
+  projects:
+    output: true
+    permalink: /:collection/:path
