--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 title: Murilo's Pink Space 🧠
 email: mrmurilo75[at]gmail.com
+author: Murilo Rosa
 description: >- # this means to ignore newlines until "baseurl:"
   Hi, my name is Murilo Rosa (which means pink in portuguese 😃). This is my personal 
   blog, where I'll make notes of (most) things I learn. Hope you enjoy your time here!
