--- a/_config.json
+++ b/_config.json
@@ -3,7 +3,7 @@
   "rendered": "_rendered",
   "destination": "_site",
   "templates": "templates",
-  "style_sheet": "/home/mrmurilo75/Desktop/mrmurilo75.github.io/_site/assets/main.css",
+  "style_sheet": "/assets/main.css",
   "cascade": {
     "_values": { "layout": "default.html" },
     "resume": { "_values": { "title": "Resume", "nav": true, "path": "resume" } }
